--- a/assets/css/pages/home/_home.sass
+++ b/assets/css/pages/home/_home.sass
@@ -6,6 +6,8 @@
             @extend .flex
             flex-flow: row wrap
             justify-content: space-between
+            +mq(737px, max)
+                display: block
             >.main-news
                 flex: 0 0 auto 
                 padding-right: calc(65px/2)
