- SQL atualizado; - login.css; - seta na sidebar animada no click

--- a/_raw/assets/css/components/sidebar/_sidebar.sass
+++ b/_raw/assets/css/components/sidebar/_sidebar.sass
@@ -20,8 +20,12 @@
             cursor: pointer
             display: block
             position: absolute
+            transform-origin: center center
+            +transition(500ms)
             right: 0            
             top: 0
+            &.open
+                transform: rotate(180deg)
         > ul 
             margin-top: 15px
             > li
