--- a/_raw/assets/css/components/header/_header.sass
+++ b/_raw/assets/css/components/header/_header.sass
@@ -76,9 +76,11 @@
                     &:hover ul
                         display: block
                     >ul 
+                        background-color: rgba(0,0,0,.6)
                         display: none
                         left: 10px
-                        padding-top: 8px
+                        left: 0px
+                        padding: 8px
                         position: absolute 
                         top: 100%
                         width: 150%
@@ -96,8 +98,9 @@
             +mq(1023px, max)
                 display: none
             font-family: '911 Porscha Expanded'
-            +rem('font-size', 20px)
+            +rem('font-size', 17px)
             position: relative
+            text-align: right
             z-index: 1
             +mq(1023px, max)
                 order: 2
